      one now must #include "qpp/qpp.h" (and similarly for other header files
      in the internal implementation). This change was made for the sake of
      making the include statements look "uniform" in both non-installed
      (compiling without having Quantum++ installed) and installed (compiling
      with Quantum++ installed headers) modes.

Version 4.3.4 - 14 August 2023
    - Docker update, see the ["docker"] directory
    - Fix in ["types.hpp"] for defaulting types when not using CMake

Version 4.3.3 - 8 August 2023
    - Minor bugfix in pyqpp setup.py that prevented pip install from remote
    - Bug fix in qpp::QEngine::execute() that prevented setting the initial
      state of the engine to a custom state

Version 4.3.2 - 12 June 2023
    - This is a maintenance release
    - Compiling errors fixed on SunOS/OpenIndiana

Version 4.3.1 - 5 June 2023
    - CMake dependent flag name changes. These flags can be used in standalone
      projects when configuring with CMake.
          USE_OPENQASM2_SPECS -> QASMTOOLS_QASM2_SPECS
          WITH_MATLAB         -> QPP_MATLAB
          WITH_OPENMP         -> QPP_OPENMP
          TYPE_BIGINT         -> QPP_BIGINT
          TYPE_FP             -> QPP_FP
          TYPE_IDX            -> QPP_IDX
    - Compile-time error fix when using FP_TYPE="long double" with
      QASMTOOLS_QASM2_SPECS=ON

Version 4.3 - 26 May 2023
    - This is a maintenance release
    - Fixed pyqpp installation on Windows under MSVC
    - Migrated all continuous integration to GitHub actions
    - Minor updates in qasmtools

Version 4.2 - 13 May 2023
    - Quantum++ is now available on Homebrew (macOS/Linux), and can be
      installed with 'brew install quantum++'
    - New types in ["types.hpp"]
          realT   - floating point type, replaces 'double' in the source code
          ubigint - unsigned big integer, defined in terms of bigint as
                    using ubigint = std::make_unsigned<bigint>::type;