@@ -73,6 +73,17 @@ inline void init_functions(py::module_& m) {
     m.def(
         "transpose", [](const cmat& A) { return qpp::transpose(A); },
         "Transpose", py::arg("A"));
+    m.def(
+        "dirac",
+        [](const cmat& A, std::vector<idx> dims_rows,
+           std::vector<idx> dims_cols) {
+            return qpp::dirac(A, dims_rows, dims_cols);
+        },
+        "Dirac notation", py::arg("A"), py::arg("dims_rows"),
+        py::arg("dims_cols"));
+    m.def(
+        "dirac", [](const cmat& A, idx d = 2) { return qpp::dirac(A, d); },
+        "Dirac notation", py::arg("A"), py::arg("d") = 2);
 }
 
 #endif /* PYQPP_FUNCTIONS_BIND_HPP_ */
